# ChangeLog for dev-libs/libical
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libical/ChangeLog,v 1.54 2009/11/12 10:45:38 pva Exp $

*libical-0.44 (12 Nov 2009)

  12 Nov 2009; Peter Volkov <pva@gentoo.org> +libical-0.44.ebuild:
  Version bump. Addes improvements, Gilles Dartiguelongue suggested in bug
  #268350. Drops -lpthread hack since upstream fixed sources. Got another
  confirmation that tests are supposed to fail.

  05 Nov 2009; Markus Meier <maekke@gentoo.org> libical-0.43.ebuild:
  arm stable, bug #281427

  09 Jun 2009; Raúl Porcel <armin76@gentoo.org> libical-0.43.ebuild:
  Add ~arm

  03 May 2009; Raúl Porcel <armin76@gentoo.org> libical-0.43.ebuild:
  alpha/ia64/sparc stable wrt #238625

  30 Apr 2009; Brent Baude <ranger@gentoo.org> libical-0.43.ebuild:
  stable ppc, bug 238625

  29 Apr 2009; Markus Meier <maekke@gentoo.org> libical-0.43.ebuild:
  amd64 stable, bug #238625

  29 Apr 2009; Brent Baude <ranger@gentoo.org> libical-0.43.ebuild:
  stable ppc64, bug 238625

  29 Apr 2009; Jeroen Roovers <jer@gentoo.org> libical-0.43.ebuild:
  Stable for HPPA (bug #238625).

  28 Apr 2009; Michele Noberasco <s4t4n@gentoo.org> libical-0.33-r1.ebuild:
  Added 'test' to RESTRICT for this version. Closes bugs #238625 and #257280.
  libical-0.43.ebuild:
  Stable for x86.

*libical-0.43 (16 Feb 2009)

  16 Feb 2009; Patrick Lauer <patrick@gentoo.org> +libical-0.43.ebuild:
  Bump to 0.43. Tests are broken, so restricting them until someone unbreaks
  them.

*libical-0.27-r1 (03 Oct 2008)

  03 Oct 2008; Michele Noberasco <s4t4n@gentoo.org> +libical-0.27-r1.ebuild:
  Added new revisions (without modifying current ARCHness since the change
  is really trivial) for all versions affected by bug #66377.
  -libical-0.27.ebuild, -libical-0.33.ebuild:
  Wiped out all ebuild revisions affected by bug #66377.
  -libical-0.31.ebuild:
  Wiped out all unstable ebuilds other than latest one.
