@@ -8,6 +8,6 @@ EBUILD libical-0.26.7.ebuild 956 RMD160 fc3e329f9d78d98b35273822a8f97d509ce951d1
 EBUILD libical-0.27-r1.ebuild 793 RMD160 98916ad707827c16494068e2ba6ef5a7afdb3682 SHA1 f33d66dd343b3efa5e6e19e0e148cbe45ae4291e SHA256 fc719dcf251bffffd9f63885ce271419d8e59ae72b18037e59e2d2bf466ab848
 EBUILD libical-0.33-r1.ebuild 809 RMD160 28bfeee354318f8f1c258063fd067e3646e71c95 SHA1 6e0d995871dfdd00513c5a7fd622758fa2363840 SHA256 ebe0a42e28c78c5eaecf9144f1ad43b91e698089144e9d0855b2945cf62b3a8f
 EBUILD libical-0.43.ebuild 919 RMD160 6af9400d7462b852bd328015fd2e791dc82d3f0e SHA1 cc5f955646e8406982a9a1af092183495155c1bc SHA256 a2f7e0dfd8693cb6efc2f1dab140e92b106084dee30ed9a5b4cc7273f0c0c6ad
-EBUILD libical-0.44.ebuild 1573 RMD160 a4570cfb27f3c3492e55b4236d08d33b4fe00e91 SHA1 788785c94607e8c5af9743ab7a214b3c63a19fe9 SHA256 551801385d87e31eec0f08c86838a550d899a949d0df5a391fd6eb0dd7640718
-MISC ChangeLog 6748 RMD160 9bb23c3c56bffc29e8c1072a87da5d27285c3117 SHA1 a5a474a887de3dffacaf25daacebc52c21dea6c6 SHA256 2684b378a4ed23831fc288694d9e34179b617cb6e4e067ce4f902884590f2001
+EBUILD libical-0.44-r1.ebuild 1778 RMD160 e9738055d248217ea227a18db215588c7a5bdd5f SHA1 9c7255e823483812a6f23aad19290889c1f3b3c6 SHA256 c4959b3102a6d427de51fd81abe8fed9840cab09cae39211b2f51e6a86b6f992
+MISC ChangeLog 6933 RMD160 3b99f471dfe607c4193d8d89c3b83aeecdfc72a0 SHA1 2450ef476bfc06e46935e58212527893fb316e87 SHA256 7df99bb04f29940a683d44f7d9d01d3bb90e5c8ebeb3c7e8f28d624d5a405afe
 MISC metadata.xml 254 RMD160 5c1b976d4bf83b9cb6770e8b6065df0c2fbad264 SHA1 f9659da73dc287f4249415f8609dd4256100bbb8 SHA256 51a4815eae0d318310ac2894236be562b906c9e662cbd13013c9733f9cc8503c
